--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">roosterbUs</string>
+    <string name="facebook_app_id">220623802057538</string>
+    <string name="fb_login_protocol_scheme">fb220623802057538</string>
+
+    <!--Navigation Drawer strings-->
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
@@ -9,4 +13,11 @@
 
     <!--Login Activity strings-->
     <string name="title_activity_login">Iniciar sesión</string>
+    <string name="login_logo_description">Logo de roosterbUs</string>
+    <string name="login_etx_username_hint">Nombre de usuario</string>
+    <string name="login_etx_password_hint">Contraseña</string>
+    <string name="login_button">Iniciar sesión</string>
+    <string name="login_txt_alternatives">O ingresar con: </string>
+    <string name="login_button_create_account">Crear cuenta</string>
+    <string name="login_copyrights">roosterbUs \u00A9 2018 \n Todos los derechos reservados</string>
 </resources>
