--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="login_txt_alternatives">O ingresar con: </string>
     <string name="login_button_create_account">Crear cuenta</string>
     <string name="login_copyrights">roosterbUs \u00A9 2018 \n Todos los derechos reservados</string>
+    <string name="title_activity_register">RegisterActivity</string>
 </resources>
