Se agrega la pantalla de añadir cursos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="title_activity_register">Registrarse</string>
     <string name="title_activity_schedule">Horario</string>
     <string name="title_activity_rate">RateActivity</string>
+    <string name="title_activity_add_courses">AddCoursesActivity</string>
 </resources>
